--- a/style/style.scss.css
+++ b/style/style.scss.css
@@ -1,5 +1,7 @@
 html {
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  font-size: 1px; }
 
 body {
   font-family: "Poppins", sans-serif;
@@ -564,7 +566,7 @@ h1, h2, h3, p {
       left: 50%;
       transform: translate(-50%, -50%);
       border-radius: 0;
-      width: 100vw; }
+      width: 200vw; }
     .contact-section p {
       text-align: justify; }
     .contact-section .left-side {
